Update en github pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Jesus Salido en GitHub</title>
     <style>
         body {
@@ -27,37 +28,57 @@
             background-color: #111;
         }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <ul class="menu">
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobremi">Sobre mÃ­</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#sobremi">Sobre mí</a></li>
+      <li><a href="#publicaciones">Publicaciones</a></li>
+      <li><a href="#contacto">Contacto</a></li>
     </ul>
-
     <section id="inicio">
-        <h1>Bienvenido a mi pÃ¡gina personal en GitHub Pages</h1>
-        <!-- Contenido de la secciÃ³n de inicio -->
-    </section>
-
+      <h1>Bienvenid@ a mi página personal en GitHub Pages</h1>
+      <!-- Contenido de la sección de inicio --> </section>
     <section id="sobremi">
-        <h1>Sobre mÃ­</h1>
-        <!-- Contenido de la secciÃ³n sobre mÃ­ -->
-        Soy un profesor de la UCLM que emplea GitHub en algunos de sus proyectos. Si quieres mÃ¡s infomraciÃ³n sobre mÃ­ 
-        y mi labor en la UCLM, puedes acceder a mi <a href="https://visilab.etsii.uclm.es/?page_id=543" target="_blank">pÃ¡gina personal</a> en la UCLM.
+      <h1>Sobre mí</h1>
+      <!-- Contenido de la sección sobre mí-->
+      <table style="width: 572px; height: 132px;" border="0">
+        <tbody>
+          <tr>
+            <td><img src="figs/js2023.png" alt="" title="Pic" style="width: 109px; height: 121px;"></td>
+            <td style="vertical-align: top; background-color: white;">En la
+              actualidad soy profesor de la UCLM y empleo GitHub en algunas de
+              mis publicaciones y proyectos públicos.<br>
+              &nbsp;<br>
+              <br>
+              <br>
+              Más información sobre mí en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
+                target="_blank">página personal</a> en la UCLM. </td>
+          </tr>
+        </tbody>
+      </table>
     </section>
-
-    <section id="proyectos">
-        <h1>Proyectos en GitHub</h1>
-        <!-- Contenido de la secciÃ³n de proyectos -->
+    <section id="publicaciones">
+      <h1>Publicaciones en GitHub</h1>
+      <!-- Contenido de la sección de publicaciones -->
+      <ul>
+        <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
+            target="_blank">Material auxiliar</a> del libro <i>"Lógica Digital
+            y Tecnología de Computadores. Un enfoque práctico mediante
+            simulación con Logisim."</i></li>
+        <li>Apuntes de <i>"Fundamentos de Informática"</i> (Programa Saramago
+          50-Plus).</li>
+        <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
+            target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
+          Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
+            title="Plantilla Overleaf" target="_blank">Overleaf</a>).</li>
+        <li><a href="https://github.com/JesusSalido/ChuLaTeX" title="Chulatex" target="_blank"><i>ChuLaTeX.
+              Una "chuleta" muy "chula" de LaTeX</i></a>.</li>
+      </ul>
     </section>
-
     <section id="contacto">
-        <h1>Contacto</h1>
-        <!-- Contenido de la secciÃ³n de contacto -->
-        Tfno: 926 29 54 27
-        email: jesus.salido@uclm.es
-    </section>
-</body>
+      <h1>Contacto</h1>
+      <!-- Contenido de la sección de contacto --> Tfno: 926 29 54 27 <br>
+      email: jesus.salido@uclm.es </section>
+  </body>
 </html>
