--- a/index.html
+++ b/index.html
@@ -32,45 +32,45 @@
   <body>
     <ul class="menu">
       <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#sobremi">Sobre mÌ</a></li>
+      <li><a href="#sobremi">Sobre m√≠</a></li>
       <li><a href="#publicaciones">Publicaciones</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
     <section id="inicio">
-      <h1>Bienvenid@ a mi p·gina personal en GitHub Pages</h1>
-      <!-- Contenido de la secciÛn de inicio --> </section>
+      <h1>Bienvenid@ a mi p√°gina personal en GitHub Pages</h1>
+      <!-- Contenido de la secci√≥n de inicio --> </section>
     <section id="sobremi">
-      <h1>Sobre mÌ</h1>
-      <!-- Contenido de la secciÛn sobre mÌ-->
+      <h1>Sobre m√≠</h1>
+      <!-- Contenido de la secci√≥n sobre m√≠-->
       <table style="width: 572px; height: 132px;" border="0">
         <tbody>
           <tr>
             <td><img src="figs/js2023.png" alt="" title="Pic" style="width: 109px; height: 121px;"></td>
             <td style="vertical-align: top; background-color: white;">En la
               actualidad soy profesor de la UCLM y empleo GitHub en algunas de
-              mis publicaciones y proyectos p˙blicos.<br>
+              mis publicaciones y proyectos p√∫blicos.<br>
               &nbsp;<br>
               <br>
               <br>
-              M·s informaciÛn sobre mÌ en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
-                target="_blank">p·gina personal</a> en la UCLM. </td>
+              M√°s informaci√≥n sobre m√≠ en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
+                target="_blank">p√°gina personal</a> en la UCLM. </td>
           </tr>
         </tbody>
       </table>
     </section>
     <section id="publicaciones">
       <h1>Publicaciones en GitHub</h1>
-      <!-- Contenido de la secciÛn de publicaciones -->
+      <!-- Contenido de la secci√≥n de publicaciones -->
       <ul>
         <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
-            target="_blank">Material auxiliar</a> del libro <i>"LÛgica Digital
-            y TecnologÌa de Computadores. Un enfoque pr·ctico mediante
-            simulaciÛn con Logisim."</i></li>
-        <li>Apuntes de <i>"Fundamentos de Inform·tica"</i> (Programa Saramago
+            target="_blank">Material auxiliar</a> del libro <i>"L√≥gica Digital
+            y Tecnolog√≠a de Computadores. Un enfoque pr√°ctico mediante
+            simulaci√≥n con Logisim."</i></li>
+        <li>Apuntes de <i>"Fundamentos de Inform√°tica"</i> (Programa Saramago
           50-Plus).</li>
         <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
-          Inform·tica (LaTeX, disponible tambiÈn en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
+          Inform√°tica (LaTeX, disponible tambi√©n en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
             title="Plantilla Overleaf" target="_blank">Overleaf</a>).</li>
         <li><a href="https://github.com/JesusSalido/ChuLaTeX" title="Chulatex" target="_blank"><i>ChuLaTeX.
               Una "chuleta" muy "chula" de LaTeX</i></a>.</li>
@@ -78,7 +78,7 @@
     </section>
     <section id="contacto">
       <h1>Contacto</h1>
-      <!-- Contenido de la secciÛn de contacto --> Tfno: 926 29 54 27 <br>
+      <!-- Contenido de la secci√≥n de contacto --> Tfno: 926 29 54 27 <br>
       email: jesus.salido@uclm.es </section>
   </body>
 </html>
