--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Jesus Salido en GitHub</title>
     <style>
         body {
@@ -38,10 +38,10 @@
     </ul>
     <section id="inicio">
       <h1>Bienvenid@ a mi página personal en GitHub Pages</h1>
-      <!-- Contenido de la sección de inicio --> </section>
+      <!-- Contenido de la secciÃ³n de inicio --> </section>
     <section id="sobremi">
       <h1>Sobre mí</h1>
-      <!-- Contenido de la sección sobre mí-->
+      <!-- Contenido de la secciÃ³n sobre mÃ­-->
       <table style="width: 572px; height: 132px;" border="0">
         <tbody>
           <tr>
@@ -60,11 +60,11 @@
     </section>
     <section id="publicaciones">
       <h1>Publicaciones en GitHub</h1>
-      <!-- Contenido de la sección de publicaciones -->
+      <!-- Contenido de la secciÃ³n de publicaciones -->
       <ul>
         <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
             target="_blank">Material auxiliar</a> del libro <i>"Lógica Digital
-            y Tecnología de Computadores. Un enfoque práctico mediante
+            y TecnologÃ­a de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
         <li>Apuntes de <i>"Fundamentos de Informática"</i> (Programa Saramago
           50-Plus).</li>
@@ -78,7 +78,7 @@
     </section>
     <section id="contacto">
       <h1>Contacto</h1>
-      <!-- Contenido de la sección de contacto --> Tfno: 926 29 54 27 <br>
+      <!-- Contenido de la secciÃ³n de contacto --> Tfno: 926 29 54 27 <br>
       email: jesus.salido@uclm.es </section>
   </body>
 </html>
