--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
       <ul>
         <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
             target="_blank">Material auxiliar</a> del libro <i>"Lógica Digital
-            y TecnologÃ­a de Computadores. Un enfoque práctico mediante
+            y Tecnología de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
-        <li>Apuntes de <i>"Fundamentos de Informática"</i> (Programa Saramago
-          50-Plus).</li>
+        <li><a href="file:///C:/Users/Jesus.Salido/OneDrive%20-%20Universidad%20de%20Castilla-La%20Mancha/Documentos/homepage/github.io/JesusSalido.github.io/50plus/index.html"
+            title="50plus" target="_blank">Apuntes</a> de <i>"Fundamentos de
+            Informática"</i> (Programa Saramago 50-Plus).</li>
         <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
           Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
