--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
               &nbsp;<br>
               <br>
               <br>
-              Más información sobre mí en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
-
+              Más información sobre mí en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
                 target="_blank">página personal</a> en la UCLM. </td>
           </tr>
         </tbody>
@@ -63,18 +62,15 @@
       <h1>Publicaciones en GitHub</h1>
       <!-- Contenido de la secciÃ³n de publicaciones -->
       <ul>
-        <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
-
+        <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
             target="_blank">Material auxiliar</a> del libro <i>"Lógica Digital
             y Tecnología de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
-        <li><a href="./docs/index.html" title="50plus" target="_blank">Apuntes</a>
+        <li><a href="./50plus/index.html" title="50plus" target="_blank">Apuntes</a>
           de <i>"Fundamentos de Informática"</i> (Programa Saramago 50-Plus).</li>
-        <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
-
+        <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
-          Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
-
+          Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
             title="Plantilla Overleaf" target="_blank">Overleaf</a>).</li>
         <li><a href="https://github.com/JesusSalido/ChuLaTeX" title="Chulatex" target="_blank"><i>ChuLaTeX.
               Una "chuleta" muy "chula" de LaTeX</i></a>.</li>
