--- a/50plus/index.html
+++ b/50plus/index.html
@@ -16,7 +16,7 @@
         src="logo50_plus.png" style="width: 183px; height: 73px;"></h1>
     <h1></h1>
     <h1><i class="fa-solid fa-computer"></i> Curso de Informática Básica</h1>
-    <p><a href="%20%20%20https://www.uclm.es/misiones/culturadeporte/extensionuniversitaria/programajosesaramago"
+    <p><a href="https://www.uclm.es/misiones/culturadeporte/extensionuniversitaria/programajosesaramago"
         target="_blank">Programa Universitario</a> "José Saramago 50Plus"</p>
     <p>Impartido por Prof.: <a href="https://visilab.etsii.uclm.es/?page_id=543"
         target="_blank">Jesús Salido</a> (UCLM)</p>
