--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             y Tecnología de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
         <li><a href="./50plus/index.html" title="50plus" target="_blank">Apuntes</a>
-          de <i>"Fundamentos de Informática"</i> (Programa Saramago 50-Plus).</li>
+          de <i>"Fundamentos de Informática"</i> (Programa José Saramago
+          50-Plus).</li>
         <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
           Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
