--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
       <h1>Publicaciones en GitHub</h1>
       <!-- Contenido de la secciÃ³n de publicaciones -->
       <ul>
-        <li><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
-            target="_blank">Material auxiliar</a> del libro <i>"Lógica Digital
-            y Tecnología de Computadores. Un enfoque práctico mediante
+        <li><i><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
+              target="_blank">Material auxiliar</a></i> del libro <i>"Lógica
+            Digital y Tecnología de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
-        <li><a href="./50plus/index.html" title="50plus" target="_blank">Apuntes</a>
-          de <i>"Fundamentos de Informática"</i> (Programa José Saramago
-          50-Plus).</li>
         <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
           Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
             title="Plantilla Overleaf" target="_blank">Overleaf</a>).</li>
         <li><a href="https://github.com/JesusSalido/ChuLaTeX" title="Chulatex" target="_blank"><i>ChuLaTeX.
               Una "chuleta" muy "chula" de LaTeX</i></a>.</li>
+        <li><i><a href="./50plus/index.html" title="50plus" target="_blank">Apuntes</a></i>
+          de <i>"Informática Básica"</i> (Programa José Saramago 50-Plus).</li>
       </ul>
     </section>
     <section id="contacto">
