--- a/50plus/index.html
+++ b/50plus/index.html
@@ -12,13 +12,17 @@
     <title>Informática Básica</title>
   </head>
   <body>
-    <h1><img src="logo_uclm.png" alt="" style="width: 286px; height: 72px;"> <img
+    <h1><img src="logo_uclm.png" alt="" style="width: 286px; height: 72px;"> <img
+
         src="logo50_plus.png" style="width: 183px; height: 73px;"></h1>
     <h1></h1>
-    <h1><i class="fa-solid fa-computer"></i> Curso de Informática Básica</h1>
-    <p><a href="https://www.uclm.es/misiones/culturadeporte/extensionuniversitaria/programajosesaramago"
+    <h1><i class="fa-solid fa-computer"></i> Curso de Informática
+      Básica (2023/24)</h1>
+    <p><a href="https://www.uclm.es/misiones/culturadeporte/extensionuniversitaria/programajosesaramago"
+
         target="_blank">Programa Universitario</a> "José Saramago 50Plus"</p>
-    <p>Impartido por Prof.: <a href="https://visilab.etsii.uclm.es/?page_id=543"
+    <p>Impartido por Prof.: <a href="https://visilab.etsii.uclm.es/?page_id=543"
+
         target="_blank">Jesús Salido</a> (UCLM)</p>
     <h2><i class="fa-solid fa-book"></i> Apuntes de las sesiones</h2>
     <ol>
@@ -31,11 +35,12 @@
       <li>(27-nov.) <a href="./docs/S4.pdf" target="_blank">Aplicaciones
           esenciales</a>.</li>
       <li>(11-dic.) <a href="./docs/S5.pdf" target="_blank">Suites ofimáticas</a>.
-        (<a href="./docs/f1.odp" target="_blank">f1_editable</a>, <a href="./docs/f2.pdf"
+        (<a href="./docs/f1.odp" target="_blank">f1_editable</a>, <a href="./docs/f2.pdf"
+
           target="_blank">f2_PDF</a>)</li>
       <li>(8/22-ene.) <a href="./docs/S6-7.pdf" target="_blank">Servicios en la
           nube</a>.</li>
     </ol>
     (<a href="./docs/Apuntes.pdf" target="_blank">Apuntes combinados completos</a>.)
-    </body>
+  </body>
 </html>
