--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Jesus Salido en GitHub</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            <!-- font-family: Arial, sans-serif; -->
+            font-family: 'Roboto', sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            color: #333;
         }
         .menu {
             margin: 0;
@@ -52,7 +56,8 @@
               &nbsp;<br>
               <br>
               <br>
-              Más información sobre mí en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
+              Más información sobre mí en mi <a href="https://visilab.etsii.uclm.es/?page_id=543"
+
                 target="_blank">página personal</a> en la UCLM. </td>
           </tr>
         </tbody>
@@ -62,13 +67,16 @@
       <h1>Publicaciones en GitHub</h1>
       <!-- Contenido de la secciÃ³n de publicaciones -->
       <ul>
-        <li><i><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
+        <li><i><a href="https://github.com/JesusSalido/CircsTecobook" title="Tecobook"
+
               target="_blank">Material auxiliar</a></i> del libro <i>"Lógica
             Digital y Tecnología de Computadores. Un enfoque práctico mediante
             simulación con Logisim."</i></li>
-        <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
+        <li><a href="https://github.com/JesusSalido/TFG_ESI_UCLM" title="Plantilla TFG"
+
             target="_blank"><i>Plantilla de TFE</i></a> de la Esc. Superior de
-          Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
+          Informática (LaTeX, disponible también en <a href="https://www.overleaf.com/latex/templates/plantilla-de-tfg-escuela-superior-de-informatica-uclm/phjgscmfqtsw"
+
             title="Plantilla Overleaf" target="_blank">Overleaf</a>).</li>
         <li><a href="https://github.com/JesusSalido/ChuLaTeX" title="Chulatex" target="_blank"><i>ChuLaTeX.
               Una "chuleta" muy "chula" de LaTeX</i></a>.</li>
