--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Jesus Salido en GitHub</title>
     <style>
         body {
-            <!-- font-family: Arial, sans-serif; -->
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            line-height: 1.6;
-            color: #333;
+            font-family: Arial, sans-serif;
         }
         .menu {
             margin: 0;
