--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
       <h1>Contacto</h1>
       <!-- Contenido de la secciÃ³n de contacto --> Tfno: 926 29 54 27 <br>
       email: jesus.salido@uclm.es </section>
+    Esto es texto normal.
   </body>
 </html>
