--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Jesus Salido en GitHub</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            <!-- font-family: Arial, sans-serif; -->
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    color: #333;
         }
         .menu {
             margin: 0;
@@ -84,6 +88,5 @@
       <h1>Contacto</h1>
       <!-- Contenido de la secciÃ³n de contacto --> Tfno: 926 29 54 27 <br>
       email: jesus.salido@uclm.es </section>
-    Esto es texto normal.
   </body>
 </html>
