--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Jesus Salido en GitHub</title>
-    <style>
-        body {
-            <!-- font-family: Arial, sans-serif; -->
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    color: #333;
-        }
-        .menu {
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-            background-color: #333;
-            overflow: hidden;
-        }
-        .menu li {
-            float: left;
-        }
-        .menu li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        .menu li a:hover {
-            background-color: #111;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Personal</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <ul class="menu">
